added more precisely defined vector index (issue #199)